--- a/CSS/HendonHeraldStylesheet.css
+++ b/CSS/HendonHeraldStylesheet.css
@@ -1,20 +1,20 @@
 * {
-    font-family: Arial,Helvetica,sans-serif;
+    font-family:Arial,Helvetica,sans-serif;
 }
 
-h1{
+h1 {
     font-size:50px;
-    display: inline-block;
+    display:inline-block;
 }
 
-h2{
+h2 {
     font:bold;
     font-size:26px;
 }
 
-h3{
+h3 {
     background-color:#700b0b;
-    color:#FFFFFF;
+    color:#FFF;
     font-size:21px;
     font:bold;
     margin-right:200px;
@@ -22,62 +22,62 @@ h3{
 
 header a {
     text-decoration:none;
-    color:#ffffff;
+    color:#fff;
 }
 
 header a:hover {
-    color:#AAAAAA
+    color:#AAA;
 }
 
-header ul {
-    display:inline-block;
-}
-
-header li {list-style:none;
+header li {
+    list-style:none;
     display:inline-block;
     width:55px;
     padding-left:14px;
     border-left-style:solid;
     border-left-width:1px;
-    border-left-color:#FFFFFF;
+    border-left-color:#FFF;
 }
 
-nav {
-    display:inline-block
-}
-
-#Logo{
+#Logo {
     height:60px;
 }
 
-#ghost,#street,#amy{
+#ghost,#street,#amy {
     height:278px;
     width:370px;
     margin-top:8px;
     padding-bottom:8px;
 }
 
-#editor{
-    height:108px;
-    width:85px;
+#Editor{
+    display: inline-block;
+    width: 800px;
+    vertical-align: top;
 }
 
-header{
+#OurEditor{
+    height: 120px;
+    width: 95px;
+    display: inline-block;
+}
+
+header {
     background-color:#700b0b;
-    color:#FFFFFF;
+    color:#FFF;
     font-size:21px;
     font:bold;
     margin:8px;
 }
 
-body{
-    color:#AAAAAA;
+body {
+    color:#AAA;
     font-size:14px;
-    margin:0;
     display:block;
+    margin:0;
 }
 
-aside{
+aside {
     float:right;
     width:200px;
     vertical-align:top;
@@ -87,57 +87,75 @@ aside table {
     width:200px;
 }
 
-thead  {
+thead {
     text-align:left;
     background-color:#404040;
-    color:#AAAAAA;
+    color:#AAA;
 }
 
 thead #Points {
     width:50px;
 }
 
-aside h3{
+aside h3 {
     font-size:18px;
     margin:0;
     padding:4px;
-
 }
 
-main{
+main {
     background-color:#f2f2f2;
     width:780px;
-    position: absolute;
+    position:absolute;
 }
 
-footer{
-    color:#FFFFFF;
-    background-color:#404040;
-    margin:8px;
+footer {
+    background-color: #404040;
+    color: #FFFFFF;
 }
 
-#ContentContainer{
+#ContentContainer {
     width:980px;
-    margin-top:0;
-    margin-bottom:0;
-    margin-left:auto;
-    margin-right:auto;
-    background-color:White;
+    margin-top: 0;
+    margin-bottom: 0;
+    Margin-left: auto;
+    Margin-right:auto;
+    background-color:#ffffff;
 }
 
-article{
-    margin-top: 8px;
-    padding-bottom: 8px;
-    margin-bottom: 1px;
-    color: #404040;
+article {
+    margin-top:8px;
+    padding-bottom:8px;
+    margin-bottom:1px;
+    color:#404040;
     display:inline-block;
     border-top-style:solid;
     border-top-width:1px;
-    border-top-color:#aaaaaa;
+    border-top-color:#aaa;
 }
 
 article div {
     display:inline-block;
     width:400px;
     vertical-align:top;
+}
+
+header ul,nav {
+    display:inline-block;
+}
+
+li#Links {
+    border-left-style:none;
+}
+
+thead  {
+    text-align:left;
+    background-color:#404040;
+    color:#AAAAAA;
+}
+
+main img {
+    width:300px;
+    height:270px;
+
 }
