--- a/CSS/HendonHeraldStylesheet.css
+++ b/CSS/HendonHeraldStylesheet.css
@@ -1,112 +1,90 @@
 * {
-    font-family:Arial,Helvetica,sans-serif;
+    font-family: Arial,Helvetica,sans-serif;
 }
 
 h1 {
-    font-size:50px;
-    display:inline-block;
+    font-size: 50px;
+    display: inline-block;
 }
 
 h2 {
-    font:bold;
-    font-size:26px;
+    font: bold;
+    font-size: 26px;
 }
 
 h3 {
-    background-color:#700b0b;
-    color:#FFF;
-    font-size:21px;
-    font:bold;
-    margin-right:200px;
-}
-
-header a {
-    text-decoration:none;
-    color:#fff;
-}
-
-header a:hover {
-    color:#AAA;
-}
-
-header li {
-    list-style:none;
-    display:inline-block;
-    width:55px;
-    padding-left:14px;
-    border-left-style:solid;
-    border-left-width:1px;
-    border-left-color:#FFF;
-}
-
-#Logo {
-    height:60px;
-}
-
-#ghost,#street,#amy {
-    height:278px;
-    width:370px;
-    margin-top:8px;
-    padding-bottom:8px;
-}
-
-#Editor{
-    display: inline-block;
-    width: 800px;
-    vertical-align: top;
-}
-
-#OurEditor{
-    height: 120px;
-    width: 95px;
-    display: inline-block;
+    background-color: #700b0b;
+    color: #FFF;
+    font-size: 21px;
+    font: bold;
 }
 
 header {
-    background-color:#700b0b;
-    color:#FFF;
-    font-size:21px;
-    font:bold;
-    margin:8px;
+    background-color: #700b0b;
+    color: #FFF;
+    font-size: 21px;
+    font: bold;
+    margin-bottom: 8px;
+}
+
+header a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header a:hover {
+    color: #AAA;
+}
+
+header li {
+    list-style: none;
+    display: inline-block;
+    width: 55px;
+    padding-left: 14px;
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-left-color: #FFF;
+}
+
+header ul,nav {
+    display: inline-block;
 }
 
 body {
-    color:#AAA;
-    font-size:14px;
-    display:block;
-    margin:0;
+    color: #404040;
+    font-size: 14px;
+    display: block;
+}
+
+main img {
+    width: 300px;
+    height: 270px;
 }
 
 aside {
-    float:right;
-    width:200px;
-    vertical-align:top;
+    float: right;
+    width: 200px;
+    vertical-align: top;
 }
 
 aside table {
-    width:200px;
-}
-
-thead {
-    text-align:left;
-    background-color:#404040;
-    color:#AAA;
-}
-
-thead #Points {
-    width:50px;
+    width: 200px;
+    color:#AAAAAA;
 }
 
 aside h3 {
-    font-size:18px;
-    margin:0;
-    padding:4px;
+    font-size: 18px;
+    margin: 0;
+    padding: 4px;
+    background-color: #700b0b;
+    color: #FFF;
+    font: bold;
 }
 
 main {
-    background-color:#f2f2f2;
-    width:780px;
-    position:absolute;
+    background-color: #f2f2f2;
+    width: 780px;
+    position: absolute;
 }
 
 footer {
@@ -114,48 +92,75 @@ footer {
     color: #FFFFFF;
 }
 
-#ContentContainer {
-    width:980px;
-    margin-top: 0;
-    margin-bottom: 0;
-    Margin-left: auto;
-    Margin-right:auto;
-    background-color:#ffffff;
-}
-
 article {
-    margin-top:8px;
-    padding-bottom:8px;
-    margin-bottom:1px;
-    color:#404040;
-    display:inline-block;
-    border-top-style:solid;
-    border-top-width:1px;
-    border-top-color:#aaa;
+    margin-top: 8px;
+    padding-bottom: 8px;
+    margin-bottom: 1px;
+    color: #404040;
+    display: inline-block;
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #aaa;
 }
 
 article div {
-    display:inline-block;
-    width:400px;
-    vertical-align:top;
+    display: inline-block;
+    width: 400px;
+    vertical-align: top;
 }
 
-header ul,nav {
-    display:inline-block;
+thead {
+    text-align: left;
+    background-color: #404040;
+    color: #AAA;
+}
+
+thead #Points {
+    width: 50px;
+}
+
+#Logo {
+    height: 60px;
+}
+
+#ghost,#street,#amy {
+    height: 278px;
+    width: 370px;
+    margin-top: 7px;
+    padding-bottom: 8px;
+    padding-top: 14px;
+}
+
+#Editor {
+    display: inline-block;
+    width: 800px;
+    vertical-align: top;
+}
+
+#OurEditor {
+    height: 120px;
+    width: 95px;
+    display: inline-block;
+    padding-top: 22px;
+    padding-left: 8px;
+}
+
+#ContentContainer {
+    width: 980px;
+    margin-top: 0;
+    margin-bottom: 0;
+    Margin-left: auto;
+    Margin-right: auto;
+    background-color: #ffffff;
 }
 
 li#Links {
-    border-left-style:none;
+    border-left-style: none;
 }
 
-thead  {
-    text-align:left;
-    background-color:#404040;
-    color:#AAAAAA;
-}
-
-main img {
-    width:300px;
-    height:270px;
-
+#caption{
+    background-color: #700b0b;
+    color: #FFF;
+    font-size: 21px;
+    font: bold;
 }
